updated name and homepage in pubspec

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: image_annotation
+name: image_annotation_plus
 description: This library provides an easy-to-use solution for adding image annotation capabilities to Flutter applications. With this library, users can draw shapes, add text, highlight specific areas, and resize annotations within a defined picture zone.
 version: 0.0.1
-homepage: https://github.com/MikitaDrazdou/image_annotation
+homepage: https://github.com/Priyanshu078/image_annotation_plus
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
